# vcpkg_ez_ports

./: README.md
cwalk/: CMakeLists.txt  CONTROL  portfile.cmake
directxtex/: CONTROL  portfile.cmake
entt/: portfile.cmake
fmt/: portfile.cmake
forest/: portfile.cmake
imgui/: CMakeLists.txt  CONTROL  portfile.cmake
miniaudio/: CONTROL  FindMiniaudio.cmake  portfile.cmake  vcpkg-cmake-wrapper.cmake
nativefiledialog/: CMakeLists.txt  portfile.cmake
nlohmann-json/: portfile.cmake
plf-colony/: CONTROL  portfile.cmake
programoptions/: CONTROL  portfile.cmake
simdjson/: CONTROL  portfile.cmake
spdlog/: portfile.cmake
stb/: portfile.cmake
yas/: portfile.cmake
